--- a/images/chan-hoi-yuki/config.ini
+++ b/images/chan-hoi-yuki/config.ini
@@ -4,17 +4,17 @@ url = https://www.diepxuan.com/chan-hoi-yuki.html
 lastopen = 2024-06-10 00:16:36
 
 [search]
-lastsearch = 2024-07-26 16:35:21
+lastsearch = 2024-07-27 04:38:46
 
 [www.instagram.com]
-match = -23.1%%
-title = Yuki Chan (@meow_kikiki)
-url = https://www.instagram.com/meow_kikiki/
+match = -30.8%%
+title = Yuki Chan (@yukichan_la)
+url = https://www.instagram.com/yukichan_la/?hl=en
 
 [www.linkedin.com]
-match = 23.1%%
-title = Hoi Chan Studio
-url = https://www.linkedin.com/in/yiu-hoi-chan
+match = -192.3%%
+title = Hoi Ki Chan - 2D Game Artist - Omoté Singapore
+url = https://www.linkedin.com/in/hoi-ki-chan-519219147
 
 [www.creativeboom.com]
 match = -307.7%%
@@ -22,9 +22,9 @@ title = Hoi Chan draws on scientific illustrations to create 'muted ...
 url = https://www.creativeboom.com/inspiration/hoi-chan/
 
 [www.facebook.com]
-match = 7.7%%
-title = Yuki-Chan Cosplay
-url = https://www.facebook.com/YukiChansp/
+match = 33.3%%
+title = Yuk Hoi Chan
+url = https://www.facebook.com/hoihihoi/
 
 [happypaca.tumblr.com]
 match = -276.9%%
