--- a/images/chieu-nhua-thai-binh-16/config.ini
+++ b/images/chieu-nhua-thai-binh-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-nhua-thai-binh-16.html
 lastopen = 2024-06-09 23:16:27
 
 [search]
-lastsearch = 2024-07-27 03:25:16
+lastsearch = 2024-07-27 04:34:12
 
 [www.lazada.vn]
 match = -17.4%%
@@ -14,12 +14,12 @@ url = https://www.lazada.vn/products/chieu-nhua-gap-gon-thai-binh-tien-dung-16-m
 [www.facebook.com]
 match = 52.2%%
 title = Chiếu Nhựa Thái Bình | Thanh Hóa
-url = https://www.facebook.com/chieunhuathaibinh/
+url = https://www.facebook.com/chieunhuathaibinh/?locale=hr_HR
 
 [www.sendo.vn]
-match = -34.8%%
-title = Chiếu Nhựa Chung Anh Thái Bình Giá Tốt, Mua Khỏi ...
-url = https://www.sendo.vn/chieu-nhua-chung-anh-thai-binh.htm
+match = 34.8%%
+title = Chiếu nhựa thái bình 1m x 1m9 - chieu
+url = https://www.sendo.vn/chie-u-nhu-a-tha-i-bi-nh-1m-x-1m9-43896854.html
 
 [shopee.vn]
 match = -78.3%%
