--- a/images/tham-giuong-ii-160x200/config.ini
+++ b/images/tham-giuong-ii-160x200/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/tham-giuong-ii-160x200.html
 lastopen = 2024-06-17 21:09:12
 
 [search]
-lastsearch = 2024-07-27 01:32:25
+lastsearch = 2024-07-27 04:30:29
 
 [www.diepxuan.com]
 match = 27.3%%
@@ -12,9 +12,9 @@ title = Thảm giường Bode 160x200 - Điệp Xuân
 url = https://www.diepxuan.com/tham-giuong-bode-160x200.html
 
 [demxanh.com]
-match = -4.5%%
-title = Thảm trải giường cao su non màu hồng
-url = https://demxanh.com/tham-trai-giuong-cao-su-non-mau-hong.html
+match = -22.7%%
+title = Thảm trải giường lông cừu TLC 06 - Hà Nội
+url = https://demxanh.com/tham-trai-giuong-long-cuu-tlc-06.html
 
 [www.lazada.vn]
 match = -113.6%%
@@ -37,9 +37,9 @@ title = Thảm Sofa Biên Hòa
 url = https://decoviet.vn/tham-sofa-bien-hoa/
 
 [www.thamvintage.vn]
-match = 12.5%%
-title = Thảm chân giường
-url = https://www.thamvintage.vn/collections/tham-chan-giuong
+match = -25.0%%
+title = Thảm Vintage
+url = https://www.thamvintage.vn/
 
 [cafeland.vn]
 match = -72.7%%
@@ -92,9 +92,9 @@ title = Thảm phòng khách - Thảm trải sàn chất lượng, giá tốt
 url = https://comehome.com.vn/phu-kien/san-pham-det-may/tham.html
 
 [flexhouse.vn]
-match = -9.1%%
-title = Thảm trải sàn chính hãng, giá tốt
-url = https://flexhouse.vn/tham-lot-san
+match = -40.9%%
+title = Thảm trải sàn phòng ngủ chính hãng, giá tốt
+url = https://flexhouse.vn/tham-trai-san-phong-ngu
 
 [decosy.com]
 match = -166.7%%
