--- a/images/chan-hoi-mai-rua/config.ini
+++ b/images/chan-hoi-mai-rua/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chan-hoi-mai-rua.html
 lastopen = 2024-06-09 23:40:13
 
 [search]
-lastsearch = 2024-07-27 05:24:31
+lastsearch = 2024-07-27 05:51:39
 
 [shopee.vn]
 match = -137.5%%
@@ -92,9 +92,9 @@ title = Các cách trị hôi chân đơn giản ai cũng có thể áp dụng
 url = https://medlatec.vn/tin-tuc/cac-cach-tri-hoi-chan-don-gian-ai-cung-co-the-ap-dung-s107-n31718
 
 [dantri.com.vn]
-match = -181.2%%
-title = Khoảnh khắc xe tăng mai rùa Nga "tả xung hữu đột" dưới ...
-url = https://dantri.com.vn/the-gioi/khoanh-khac-xe-tang-mai-rua-nga-ta-xung-huu-dot-duoi-lan-dan-cua-ukraine-20240426150114752.htm
+match = -168.8%%
+title = Nga triển khai thiết bị vô hiệu UAV lên xe tăng "mai rùa"
+url = https://dantri.com.vn/the-gioi/nga-trien-khai-thiet-bi-vo-hieu-uav-len-xe-tang-mai-rua-20240417155609983.htm
 
 [thvl.vn]
 match = -12.5%%
