--- a/images/chieu-lac-soc-16/config.ini
+++ b/images/chieu-lac-soc-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-lac-soc-16.html
 lastopen = 2024-06-09 23:48:14
 
 [search]
-lastsearch = 2024-07-27 03:52:12
+lastsearch = 2024-07-27 06:01:38
 
 [www.pnj.com.vn]
 match = -56.2%%
@@ -72,9 +72,9 @@ title = TIN CHIỀU 25/7: HUYỀN THOẠI M.U MUỐN GIỮ RASHFORD ...
 url = https://www.youtube.com/watch?v=LXqHpPenE6A
 
 [books.google.com]
-match = -218.8%%
-title = Chức vụ cung ứng Lời Tập 25 Số 1 Kì 2: Nghiên cứu kết tinh ...
-url = https://books.google.com/books?id=FeBCEAAAQBAJ&pg=PT182&lpg=PT182&dq=chieu+lac+soc+16&source=bl&ots=aHacyO4gsa&sig=ACfU3U0P8dWxks6T9fpnE6wihGNV0yDNtg&hl=en&sa=X&ved=2ahUKEwigiJieuMWHAxWSODQIHarQDhAQ6AF6BAgpEAM
+match = -131.2%%
+title = 5000 bài viết chuyên mục Tâm sự trên VnExpress
+url = https://books.google.com/books?id=-TLoEAAAQBAJ&pg=PT11180&lpg=PT11180&dq=chieu+lac+soc+16&source=bl&ots=1ao6nTmY9u&sig=ACfU3U0-pPtpb_JRfmCnzqRQNqaECTN2TA&hl=en&sa=X&ved=2ahUKEwiw1sfz58WHAxXvHEQIHX4JMZYQ6AF6BAgiEAM
 
 [dantocmiennui.vn]
 match = -125.0%%
