--- a/images/ga-chun-thang-loi-180x200/config.ini
+++ b/images/ga-chun-thang-loi-180x200/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/ga-chun-thang-loi-180x200.html
 lastopen = 2024-06-06 16:41:04
 
 [search]
-lastsearch = 2024-07-27 05:25:53
+lastsearch = 2024-07-27 05:56:27
 
 [maythangloi.com.vn]
 match = -77.8%%
@@ -49,7 +49,7 @@ url = https://demxanh.com/bo-ga-chun-cotton-chong-tham-mau-xanh-duong.html?srslt
 [www.lazada.vn]
 match = 0.0%%
 title = TXVhIELhu5kgZ2EgZ2nGsOG7n...
-url = https://www.lazada.vn/ga-giuong/th-ng-l-i/?srsltid=AfmBOoq7Uv-7_MCLcBFmHSDparUBREBzcj3LKnykdfzcIja9GTndGIgA
+url = https://www.lazada.vn/ga-giuong/th-ng-l-i/
 
 [nemcaosuthangloi.vn]
 match = 12.0%%
