--- a/images/man-ren-16/config.ini
+++ b/images/man-ren-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/man-ren-16.html
 lastopen = 2024-06-07 00:52:49
 
 [search]
-lastsearch = 2024-07-27 05:00:57
+lastsearch = 2024-07-27 05:57:46
 
 [quizlet.com]
 match = -170.0%%
@@ -54,7 +54,7 @@ url = https://en.wikipedia.org/wiki/Ren_Gill
 [books.google.com]
 match = -430.0%%
 title = Proceedings of the 10th West Coast Conference on Formal ...
-url = https://books.google.com/books?id=BQ93UeXC1_kC&pg=PA187&lpg=PA187&dq=man+ren+16&source=bl&ots=ftlgiKEnnc&sig=ACfU3U0QDRqG-wgXJNMZPCMbqcIJPnjqvA&hl=en&sa=X&ved=2ahUKEwjIn4Wr2sWHAxWsrYkEHevzB58Q6AF6BAgcEAM
+url = https://books.google.com/books?id=BQ93UeXC1_kC&pg=PA187&lpg=PA187&dq=man+ren+16&source=bl&ots=ftlgiKHrob&sig=ACfU3U0wnLNRoichOp20fJ4m_2VYuSkT6g&hl=en&sa=X&ved=2ahUKEwieydmE58WHAxUuCTQIHeH9KZEQ6AF6BAgXEAM
 
 [www.phillyvoice.com]
 match = 0.0%%
