--- a/images/man-tu-bung-20-22/config.ini
+++ b/images/man-tu-bung-20-22/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/man-tu-bung-20-22.html
 lastopen = 2024-06-09 23:31:04
 
 [search]
-lastsearch = 2024-07-27 04:15:49
+lastsearch = 2024-07-27 05:51:00
 
 [www.bible.com]
 match = -64.7%%
@@ -17,9 +17,9 @@ title = Exodus 1-40 - Mizo BIBle - WordPress.com
 url = https://mizobibleblog.wordpress.com/2017/02/24/exodus-1-40/
 
 [www.biblegateway.com]
-match = -82.4%%
-title = John 20:22 New International Version
-url = https://www.biblegateway.com/passage/?search=John 20:22&version=NIV
+match = -129.4%%
+title = Matthew 20:22 NIV - “You don't know what you are
+url = https://www.biblegateway.com/passage/?search=Matthew 20:22&version=NIV
 
 [mungchup.com]
 match = -100.0%%
@@ -32,9 +32,9 @@ title = MÙNG NGỦ, MÙNG CHỤP TỰ BUNG CAO CẤP HOÀNG PHÁT
 url = https://munghoangphat.com/
 
 [www.churchofjesuschrist.org]
-match = -205.9%%
-title = 1 Nifai 18 - The Church of Jesus Christ of Latter-day Saints
-url = https://www.churchofjesuschrist.org/study/scriptures/bofm/1-ne/18?lang=tpi
+match = -17.6%%
+title = Doktrin na ol Kavanen 78
+url = https://www.churchofjesuschrist.org/study/scriptures/dc-testament/dc/78?lang=tpi
 
 [scert.mizoram.gov.in]
 match = -18.2%%
@@ -52,9 +52,9 @@ title = What does Matthew 20:22 mean?
 url = https://www.bibleref.com/Matthew/20/Matthew-20-22.html
 
 [www.youtube.com]
-match = -217.6%%
-title = 2 Samuel 20:22-22:2- English Bible Study - Father Mina Dimitri
-url = https://www.youtube.com/watch?v=s0FkEP6cCY8
+match = -142.9%%
+title = hmmm...
+url = https://www.youtube.com/watch?v=89EqML75i9U
 
 [www.biblestudytools.com]
 match = -129.4%%
@@ -67,9 +67,9 @@ title = 1930 Census: Alphabetical index of occupations
 url = https://www2.census.gov/library/publications/decennial/1930/occupation-indexes/occupation-index-alpha.pdf
 
 [www.tiktok.com]
-match = -229.4%%
-title = As an aurora spreads across the stars following the Witness’s ...
-url = https://www.tiktok.com/@destinythegame/video/7378920467576442155
+match = -158.8%%
+title = Repairing threads on Inlet NOX sensor bung on 1-Box ...
+url = https://www.tiktok.com/@thedieseltechs/video/7306827916053138731
 
 [en.wikipedia.org]
 match = -36.4%%
@@ -152,9 +152,9 @@ title = Hướng dẫn sử dụng màn tự bung đỉnh rộng chân vải Thu
 url = https://manthutrang.com/blogs/video/huong-dan-su-dung-man-tu-bung-dinh-rong-chan-vai-thu-trang
 
 [www.facebook.com]
-match = -158.8%%
-title = Cách sử dụng màn chụp tự bung 2 cửa đỉnh vuông cao cấp ...
-url = https://www.facebook.com/demxanhcom/videos/cách-sử-dụng-màn-chụp-tự-bung-2-cửa-đỉnh-vuông-cao-cấp/718813088661095/
+match = -211.8%%
+title = Bún Bung reflects the soul of of the... - The Spices of Life
+url = https://www.facebook.com/TheSpicesOfLife/posts/bún-bung-reflects-the-soul-of-of-the-north-my-first-bowl-of-this-noodle-soup-was/3179602032108874/
 
 [wol.jw.org]
 match = -64.7%%
@@ -195,4 +195,9 @@ url = https://www.christianity.com/bible/kjv/matthew/20-22
 match = 5.9%%
 title = The Roswell Report
 url = https://media.defense.gov/2010/Dec/01/2001329893/-1/-1/0/roswell-2.pdf
+
+[ulele.com]
+match = -152.9%%
+title = Native-Inspired Lunch & Dinner On Tampa's Riverwalk
+url = https://ulele.com/
 
