--- a/images/vo-chan-ks-uc-20-230/config.ini
+++ b/images/vo-chan-ks-uc-20-230/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/vo-chan-ks-uc-20-230.html
 lastopen = 2024-06-10 00:43:14
 
 [search]
-lastsearch = 2024-07-27 02:56:51
+lastsearch = 2024-07-27 05:53:23
 
 [www.dir.ca.gov]
 match = -28.6%%
@@ -12,9 +12,9 @@ title = Lien Claimants
 url = https://www.dir.ca.gov/ftproot/EAMSLienClaimants.txt
 
 [profiles.ucsf.edu]
-match = 10.0%%
-title = Joan Hilton, DSc, MPH
-url = https://profiles.ucsf.edu/joan.hilton
+match = 0.0%%
+title = Joel Palefsky, MD
+url = https://profiles.ucsf.edu/joel.palefsky
 
 [cityofclovis.com]
 match = -65.0%%
@@ -27,9 +27,9 @@ title = App by School
 url = https://studentaid.gov/sites/default/files/fsawg/datacenter/library/2023-2024-app-data-by-school-q5.xls
 
 [www.ncbi.nlm.nih.gov]
-match = -170.0%%
-title = Exposure to environmentally persistent free radicals during ...
-url = https://www.ncbi.nlm.nih.gov/pmc/articles/PMC4935140/
+match = -145.0%%
+title = Stem cell-based multi-tissue platforms to model human ...
+url = https://www.ncbi.nlm.nih.gov/pmc/articles/PMC9587366/
 
 [www.energy.gov]
 match = -95.0%%
