--- a/images/vo-goi-ks-uc-50-70/config.ini
+++ b/images/vo-goi-ks-uc-50-70/config.ini
@@ -4,17 +4,17 @@ url = https://www.diepxuan.com/vo-goi-ks-uc-50-70.html
 lastopen = 2024-06-10 00:52:12
 
 [search]
-lastsearch = 2024-07-27 03:52:55
+lastsearch = 2024-07-27 05:59:10
 
 [www.lazada.vn]
 match = -27.8%%
 title = Vỏ Gối 50x70 Trắng Giá Tốt T07/2024
-url = https://www.lazada.vn/tag/vo-goi-50x70-trang/
+url = https://www.lazada.vn/tag/vo-goi-50x70-trang/?srsltid=AfmBOopRKx5egYGylx_gXHcjHRQ0kdF6DAsF2307eXg49I_9ve_YqZVG
 
 [ru9.vn]
 match = -38.9%%
 title = Bật Mí: Vỏ Gối Khách Sạn Dùng Loại Gì?
-url = https://ru9.vn/blogs/magazine/vo-goi-khach-san-dung-la-loai-gi
+url = https://ru9.vn/blogs/magazine/vo-goi-khach-san-dung-la-loai-gi?srsltid=AfmBOopboBnL_jpg1I9tgiOGcGWC8wR_FmhqpXF7zStvNAquNJU2tr_I
 
 [www.diepxuan.com]
 match = -55.6%%
@@ -47,9 +47,9 @@ title = {search_title}
 url = {search_url}
 
 [ninhouse.vn]
-match = 43.8%%
-title = Vỏ gối khách sạn
-url = https://ninhouse.vn/products/vo-goi-khach-san
+match = 44.4%%
+title = Vỏ gối nằm Classic
+url = https://ninhouse.vn/collections/vo-goi-nam-classic?srsltid=AfmBOopS_XJlFzHqP5XXy4fC9sDmxkaMLl5PR4zNCI-ENzQ0LnckSWcR
 
 [tonybed.vn]
 match = -100.0%%
@@ -89,7 +89,7 @@ url = https://thegioidemviet.vn/vo-goi-khach-san/
 [demxanh.com]
 match = -155.6%%
 title = Chuyên các sản phẩm vỏ gối chính hãng giá rẻ nhất Hà Nội
-url = https://demxanh.com/vo-goi.html
+url = https://demxanh.com/vo-goi.html?srsltid=AfmBOoq-XaGB27r84YdKgRP1D5w5xakRxOxuQ3VvHDQet-Wg5lKxPQ8f
 
 [templeshalom.ca]
 match = 0.0%%
@@ -202,9 +202,9 @@ title = Talis S Single lever basin mixer 100 with pop-up waste set
 url = https://www.hansgrohe.com/articledetail-talis-s-single-lever-basin-mixer-100-with-pop-up-waste-set-72020000
 
 [pro.hansgrohe.com]
-match = -138.9%%
-title = AXOR Universal Softsquare Shower door handle 444 mm
-url = https://pro.hansgrohe.com/articledetail-axor-universal-softsquare-shower-door-handle-444-mm-42837000
+match = -200.0%%
+title = Crometta S, Shower system 240 1jet with single lever mixer ...
+url = https://pro.hansgrohe.com/articledetail-crometta-s-shower-system-240-1jet-with-single-lever-mixer-27958000
 
 [www.sciencedirect.com]
 match = -150.0%%
