--- a/images/chieu-dieu-hoa-lua-co-goi-14/config.ini
+++ b/images/chieu-dieu-hoa-lua-co-goi-14/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/chieu-dieu-hoa-lua-co-goi-14.html
 lastopen = 2024-06-09 22:25:57
 
 [search]
-lastsearch = 2024-07-27 04:53:38
+lastsearch = 2024-07-27 06:55:41
 
 [shopee.vn]
-match = -21.4%%
-title = Chiếu điều hòa cao su non coco mẫu mới 2024 tặng kèm 2 ...
-url = https://shopee.vn/Chiếu-điều-hòa-cao-su-non-coco-mẫu-mới-2024-tặng-kèm-2-vỏ-gối-Ga-cao-su-non-điều-hòa-đủ-kích-thước-i.891230701.25266141134
+match = 21.4%%
+title = Chiếu Điều Hòa Giá Tốt, Chất Lượng, Đảm Bảo
+url = https://shopee.vn/list/chiếu điều hòa
 
 [chieutrelanlan.com]
 match = 19.0%%
@@ -24,7 +24,7 @@ url = https://goni.vn/chieu-dieu-hoa-goni/
 [demxanh.com]
 match = 21.4%%
 title = Sử dụng chiếu điều hòa có tốt hay không?
-url = https://demxanh.com/su-dung-chieu-dieu-hoa-co-tot-hay-khong.html?srsltid=AfmBOopFuRr1mEgcmCyOx5bVF-wmDBWQfKX6Ytw2S_4y8KZJgePO5txd
+url = https://demxanh.com/su-dung-chieu-dieu-hoa-co-tot-hay-khong.html
 
 [tiki.vn]
 match = 28.6%%
@@ -34,7 +34,7 @@ url = https://tiki.vn/blog/chieu-dieu-hoa/
 [sieuthidem.vn]
 match = 32.1%%
 title = Bộ chiếu điều hoà Tencel TC01 - Hà Nội
-url = https://sieuthidem.vn/san-pham/bo-chieu-dieu-hoa-tencel-tc01/?srsltid=AfmBOooMo-RijvoyXNoHw6MdrmvuhDgyJJOpyqSkdnXytMh6zj9uKLU7
+url = https://sieuthidem.vn/san-pham/bo-chieu-dieu-hoa-tencel-tc01/
 
 [kyoryo.vn]
 match = -35.7%%
@@ -54,7 +54,7 @@ url = https://khodem.vn/chieu-dieu-hoa-loai-nao-tot-3-loai-pho-bien/
 [foreverbedding.net]
 match = -3.6%%
 title = Nằm Chiếu Điều Hòa Có Mát Không? - Forever Bedding
-url = https://foreverbedding.net/nam-chieu-dieu-hoa-co-mat-khong?srsltid=AfmBOoquT-1UgCDlGDUSEC4CaaHbRu6tkj7ypRxTTfhUPgUAlN0jbqPy
+url = https://foreverbedding.net/nam-chieu-dieu-hoa-co-mat-khong
 
 [www.youtube.com]
 match = 14.3%%
@@ -174,5 +174,5 @@ url = https://www.congnghieptieudung.vn/su-that-ve-cong-dung-cua-chieu-dieu-hoa-
 [fptshop.com.vn]
 match = -10.7%%
 title = Chiếu điều hoà là gì? Dùng chiếu điều hòa có tốt không?
-url = https://fptshop.com.vn/tin-tuc/dien-may/chieu-dieu-hoa-la-gi-161105?srsltid=AfmBOopYjaQcObzonfwT7psDe_eQ8fK4mEopx5BCFpbkh7DfhoSXr7Yy
+url = https://fptshop.com.vn/tin-tuc/dien-may/chieu-dieu-hoa-la-gi-161105
 
