--- a/images/vo-goi-vuong-uc/config.ini
+++ b/images/vo-goi-vuong-uc/config.ini
@@ -4,32 +4,32 @@ url = https://www.diepxuan.com/vo-goi-vuong-uc.html
 lastopen = 2024-06-06 16:45:20
 
 [search]
-lastsearch = 2024-07-27 04:49:41
+lastsearch = 2024-07-27 06:56:25
 
 [www.lazada.vn]
 match = -193.3%%
 title = [Hot shxliuuioixoe 522] rồng Úc vỏ gối vuông vải lanh ...
-url = https://www.lazada.vn/products/hot-shxliuuioixoe-522-rong-uc-vo-goi-vuong-vai-lanh-polyester-nhung-mo-hinh-zip-goi-tua-lung-trang-tri-truong-hop-boc-goi-giuong-ngu-ban-buon-i2559065940.html?srsltid=AfmBOopt5JWdWpuxQbagKPcrLs_ei_DKycldf2HgSgMOknchkVjy-V3C
+url = https://www.lazada.vn/products/hot-shxliuuioixoe-522-rong-uc-vo-goi-vuong-vai-lanh-polyester-nhung-mo-hinh-zip-goi-tua-lung-trang-tri-truong-hop-boc-goi-giuong-ngu-ban-buon-i2559065940.html
 
 [shopee.vn]
-match = -100.0%%
-title = Vỏ gối vuông tựa lưng vải nhung 45cmx45cm ...
-url = https://shopee.vn/Vỏ-gối-vuông-tựa-lưng-vải-nhung-45cmx45cm-vỏ-gối-ôm-vỏ-gối-vuông-sofa-vỏ-gối-vuông-trang-trí-quán-cafe-có-khóa-kéo-i.30819657.3861605503
+match = -140.0%%
+title = Rẻ Vô Địch Gối vuông tựa trang trí ( Gồm vỏ + ruột
+url = https://shopee.vn/Rẻ-Vô-Địch-Gối-vuông-tựa-trang-trí-(-Gồm-vỏ-ruột-Giá-tại-xưởng)-i.18055727.785277066
 
 [jysk.vn]
 match = -166.7%%
 title = Vỏ Gối Trang Trí, Vỏ Gối Sofa Đẹp, Giá Rẻ - JYSK.vn
-url = https://jysk.vn/vo-goi-trang-tri?srsltid=AfmBOopfKDI-bm_SVQs3Myy5JucGVLmbxyo_9AKPc_omON9wOwe2MzyH
+url = https://jysk.vn/vo-goi-trang-tri
 
 [chus.vn]
 match = -173.3%%
 title = Vỏ Gối Vuông H'mông, Thổ Cẩm PIÊU - Brocade Decor - CHUS
-url = https://chus.vn/vo-goi-vuong-hmong/?srsltid=AfmBOooGmpJUgHHAsnTKya6MnTvmO0sLDNoPDOvmct5_DXWXJlPSPmcd
+url = https://chus.vn/vo-goi-vuong-hmong/
 
 [ninhouse.vn]
 match = -106.7%%
 title = Mua vỏ gối nằm | Áo gối ngủ đẹp giá rẻ ...
-url = https://ninhouse.vn/collections/vo-goi-nam?srsltid=AfmBOorqyjE6gI7ZpntGuC26LCpkraXLIE79eKVK2U9N_C5oo0F5FWXJ
+url = https://ninhouse.vn/collections/vo-goi-nam
 
 [lepetit.com.vn]
 match = -6.7%%
