--- a/images/chieu-truc-cong-ty-14/config.ini
+++ b/images/chieu-truc-cong-ty-14/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/chieu-truc-cong-ty-14.html
 lastopen = 2024-06-09 23:39:55
 
 [search]
-lastsearch = 2024-07-27 06:26:42
+lastsearch = 2024-07-27 09:01:17
 
 [chieutrucsaigon.com]
 match = 0.0%%
-title = CHIẾU TRÚC HẠT VÀNG HƯƠNG TRÚC 1.4M X 2M
-url = https://chieutrucsaigon.com/chieu-truc-hat-vang-huong-truc-1m4x2m.html
+title = CHIẾU TRÚC SẢN PHẨM ĐỘC ĐÁO ĐA DẠNG
+url = https://chieutrucsaigon.com/tin-tuc/tin-tuc-moi/chieu-truc-san-pham-doc-dao-da-dang-40.html
 
 [chieutrelanlan.com]
 match = -76.2%%
@@ -19,7 +19,7 @@ url = https://chieutrelanlan.com/chieu-truc-mat-nho-loai-khong-vien-mau-trang-16
 [nemsaithanh.com]
 match = -10.0%%
 title = Chiếu Trúc
-url = https://nemsaithanh.com/chieu-truc-103.html
+url = https://nemsaithanh.com/san-pham/chieu-truc-135.html
 
 [trangvangvietnam.com]
 match = -61.9%%
@@ -42,9 +42,9 @@ title = Phân phối chiếu trúc Việt Nam giá rẻ tại Hà Nội
 url = https://thegioichieutruc.com/
 
 [www.facebook.com]
-match = 21.1%%
-title = Thế Giới Chiếu Trúc
-url = https://www.facebook.com/thegioichieutruc/
+match = 50.0%%
+title = CHIẾU TRÚC | Hanoi
+url = https://www.facebook.com/chieutrucviet/?locale=vi_VN
 
 [chieutruccaobang.com.vn]
 match = 57.9%%
