--- a/images/tham-bali-160x230/config.ini
+++ b/images/tham-bali-160x230/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/tham-bali-160x230.html
 lastopen = 2024-06-07 00:36:14
 
 [search]
-lastsearch = 2024-07-27 08:03:55
+lastsearch = 2024-07-27 09:04:04
 
 [demxanh.com]
 match = -41.2%%
@@ -12,19 +12,19 @@ title = Thảm trải sàn Bali siêu khuyến mại
 url = https://demxanh.com/tham-trai-san-bali.html
 
 [tiki.vn]
-match = -117.6%%
-title = Thảm trải sàn bali cao cấp kích thước 160*230cm mã 33
-url = https://tiki.vn/tham-trai-san-bali-cao-cap-kich-thuoc-160-230cm-ma-33-p38118982.html
+match = -141.2%%
+title = Mua Thảm trải sàn bali cao cấp kích thước 160*230cm mã 31
+url = https://tiki.vn/tham-trai-san-bali-cao-cap-kich-thuoc-160-230cm-ma-31-p38118824.html?spid=56906252
 
 [www.lazada.vn]
-match = -158.8%%
-title = Thảm Trải Sàn Nhập Khẩu 100%% Cao Cấp, Sang Trọng, ...
-url = https://www.lazada.vn/products/tham-li-bali-tham-trai-san-nhap-khau-100-cao-cap-sang-trong-120x160cm-160x230cm-trang-tri-phong-khach-phong-ngu-chup-hinhvv-i1557646010.html
+match = -94.1%%
+title = Thảm Bali Trải Sàn Phòng Ngủ Giá Tốt T07/2024
+url = https://www.lazada.vn/tag/tham-bali-trai-san-phong-ngu/
 
 [thegioidemviet.vn]
-match = -152.9%%
-title = Thảm trải sàn Bali M3 mẫu đẹp, giá rẻ nhất thị trường
-url = https://thegioidemviet.vn/tham-trai-san-bali-m3/
+match = -135.3%%
+title = Thảm trải sàn Bali M2 hàng cao cấp, mẫu mã đa dạng
+url = https://thegioidemviet.vn/tham-trai-san-bali-m2/
 
 [sammas.vn]
 match = -111.8%%
